# unit-testing-ppp

./: Cargo.toml
src/: ch_02.rs  ch_03.rs  ch_05.rs  ch_06.rs  lib.rs
src/ch_06_audit_log/: mod.rs  sample_01.rs  sample_02.rs  sample_03.rs
src/ch_07_user_management/: mod.rs  sample_01.rs  sample_02.rs  sample_03.rs  sample_04_can_execute.rs
src/ch_08/: mod.rs  sample_01.rs  test_helper.rs  types.rs
src/ch_09/: mod.rs  sample_01.rs  sample_02.rs  test_helper.rs
src/ch_09_02/: sample_01.rs  test_helper.rs  types.rs
