[package]
name = "unit-testing-ppp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
derive_more = "0.99.17"
mockall = "0.11.3"
rusqlite = { version = "0.28.0", features = ["bundled"] }
rust_decimal = "1.28.1"
rust_decimal_macros = "1.28.1"
thiserror = "1.0.38"
